[gd_scene load_steps=15 format=2]

[ext_resource path="res://abstract-platformer-370-assets/PNG/Enemies/enemySpikey_1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://abstract-platformer-370-assets/PNG/Enemies/enemySpikey_3.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Enemy2.gd" type="Script" id=4]
[ext_resource path="res://abstract-platformer-370-assets/PNG/Enemies/enemySpikey_2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/PlayerDete.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/AttackCnotrol.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 25.0799

[sub_resource type="CircleShape2D" id=2]
radius = 33.0151

[sub_resource type="CircleShape2D" id=4]
radius = 127.016

[sub_resource type="CircleShape2D" id=5]
radius = 20.025

[node name="Enemy2" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 4 )

[node name="AnimSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "Idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 6 )]
maxHealth = 4

[node name="PlayerDete" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="PlayerDete" index="0"]
self_modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 4 )

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 5 )

[node name="AttackCnotrol" parent="." instance=ExtResource( 9 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="noHealth" from="Stats" to="." method="_on_Stats_noHealth"]

[editable path="Hurtbox"]
[editable path="PlayerDete"]
[editable path="Hitbox"]
